# python_in_production

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject copy.tomllll  pyproject.toml  run copy.sh  run.sh  setup.py.sample
.github/workflows/: publish.yaml
10/: main.py
8/: cyclomatic_complexity.py  unformatted.py  unformatted.py_
9/76/: .pre-commit-config.yaml.sample  pre-commit.md  pyproject.toml.sample
9/9.1a/: .flake8  .isort.cfg  .pylintrc  check-code-quality.sh  type_hints.py  type_hints.py_
9/9.1a copy/: ruff.toml
9/9.1b/: check-code-quality.sh  test.py  type_hints.py
some_package/: states_info.py
some_package_mln.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
